syntax = "proto3";
import "users.proto";

option go_package = "github.com/PaulOh5/server-streaming/service";

service Repo {
  rpc GetRepos (RepoGetRequest) returns (stream RepoGetReply) {}
  rpc CreateBuild (Repository) returns (stream RepoBuild) {}
}

message RepoGetRequest {
  string id = 2;
  string creator_id = 1;
}

message Repository {
  string id = 1;
  string name = 2;
  string url = 3;
  User owner = 4;
}

message RepoGetReply {
  Repository repo = 1;
}

message RepoBuild {
  string log_line = 1;
  string timestampe = 2;
}
